tests/datakinds/should_compile/DataKind7.hs
{-# LANGUAGE DataKinds #-}
module DataKind7 where

data kind Ka = Ta

data kind Kb = Tb Ka
